--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ body {
     width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .main-header-main_block-text-title {
@@ -122,4 +122,258 @@ body {
     width: inherit !important;
     border-radius: 1vh;
     box-shadow: 0 15px 30px 0 rgba(0, 100, 170, 0.5);
+}
+
+.main-rating {
+    width: 60%;
+    height: 20vh;
+    display: flex;
+    padding: 5% 20% 3%;
+    flex-direction: column;
+}
+
+.main-rating-rate {
+    width: 100%;
+    display: inherit;
+    justify-content: space-between;
+}
+
+.main-rating-rate-row {
+    width: 30%;
+    display: inherit;
+    border: 1px solid #ededed;
+    border-top-right-radius: 3vh;
+    justify-content: space-between;
+    border-bottom-right-radius: 3vh;
+}
+
+.main-rating-rate-block {
+    width: 70%;
+    padding: 2vh 1vh;
+    display: inherit;
+    justify-content: space-around;
+}
+
+.main-rating-rate-block-logo {
+    width: 15%;
+}
+
+.main-rating-rate-block-rating {
+    width: auto;
+    display: inherit;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.main-rating-rate-block-rating-title {
+    margin: 0;
+    font-size: 1vw;
+    word-break: break-all;
+}
+
+.main-rating-rate-block-rating-rate {
+    width: 5vw;
+}
+
+.main-rating-rate-block-rate_number {
+    padding: 2vh;
+    color: #0064aa;
+    display: inherit;
+    font-size: 1.25vw;
+    font-weight: bold;
+    background: #ededed;
+    align-items: center;
+    justify-content: center;
+    border-top-right-radius: 3vh;
+    border-bottom-right-radius: 3vh;
+}
+
+.main-rating-comment {
+    margin: 1vh 0;
+    display: inherit;
+    justify-content: center;
+}
+
+.main-rating-comment-text {
+    font-size: 1.5vw;
+}
+
+.main-left_circle {
+    left: 0;
+    top: 115%;
+    position: absolute;
+}
+
+.main-why_us {
+    width: 60%;
+    height: 50vh;
+    padding: 4% 20%;
+    display: inherit;
+    align-items: center;
+    flex-direction: column;
+    background: url("../img/why_us_bg.png") no-repeat center;
+    background-size: cover;
+}
+
+.main-why_us-title {
+    margin: 0 0 1vh;
+    font-weight: 500;
+    font-size: 3vw;
+}
+
+.main-why_us-underline {
+    width: 10vh;
+    background: #0064aa;
+    border: 2px solid #0064aa;
+}
+
+.main-why_us-list {
+    margin: 2vh 0 0;
+    padding: 0;
+    list-style: none;
+}
+
+.main-why_us-list-item {
+    display: flex;
+    margin: 2vh 0;
+    font-size: 1.5vw;
+    font-weight: 500;
+    align-items: center;
+}
+
+.main-why_us-list-item-icon {
+    width: 5%;
+    margin-right: 2vh;
+}
+
+.main-right_circle {
+    right: 0;
+    top: 180%;
+    position: absolute;
+}
+
+.main-order_form {
+    width: 100%;
+    padding: 4% 0;
+    display: inherit;
+    align-items: center;
+    flex-direction: column;
+}
+
+.main-order_form-title {
+    margin: 0 0 1vh;
+    font-size: 3.25vw;
+    font-weight: 500;
+}
+
+.main-order_form-href {
+    margin: 3% 0;
+}
+
+.main-order_form-button {
+    width: auto;
+    padding: 2vh;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    font-size: 1.25vw;
+    font-weight: 500;
+    border-radius: 1vh;
+    background: #0064aa;
+    height: max-content;
+    text-transform: uppercase;
+    border: 1px solid #0064aa;
+    box-shadow: 0 15px 30px 0 rgba(0, 100, 170, 0.1);
+}
+
+.main-order_form-button:hover {
+    color: #0064aa;
+    background: white;
+}
+
+.main-left_second_circle {
+    top: -20%;
+}
+
+.main-work {
+    width: 60%;
+    padding: 4% 20%;
+    display: inherit;
+    position: relative;
+    align-items: center;
+    flex-direction: column;
+    background: url("../img/work_bg.png") no-repeat center;
+    background-size: cover;
+}
+
+.main-work-steps {
+    width: 100%;
+    margin: 5vh 0 2vh;
+    display: inherit;
+    justify-content: space-between;
+}
+
+.main-work-steps-step {
+    width: 20%;
+    padding: 6%;
+    margin-top: 10%;
+    display: inherit;
+    border-radius: 2vh;
+    position: relative;
+    align-items: center;
+    background: #fcfcfb;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid white;
+}
+
+.main-work-steps-step:hover {
+    border: 2px solid #0064aa;
+}
+
+.main-work-steps-step-number_block {
+    top: -40%;
+    display: inherit;
+    padding: 1vh 4vh 0;
+    position: absolute;
+    border-radius: 2vh;
+    background: #0064aa;
+    align-items: center;
+    flex-direction: column;
+    border: 2px solid white;
+    justify-content: center;
+}
+
+.main-work-steps-step:hover .main-work-steps-step-number_block {
+    border: 2px solid #0064aa;
+    background: white;
+}
+
+.main-work-steps-step-number_block-number {
+    color: white;
+    font-size: 3vw;
+    margin: 0 0 1vh;
+    font-weight: bold;
+}
+
+.main-work-steps-step-number_block-text {
+    color: white;
+    margin: 0 0 2vh;
+    font-size: 1vw;
+    text-transform: uppercase;
+}
+
+.main-work-steps-step:hover .main-work-steps-step-number_block-number,
+.main-work-steps-step:hover .main-work-steps-step-number_block-text {
+    color: #0064aa;
+}
+
+.main-work-steps-step-description {
+    font-size: 1.2vw;
+    margin-bottom: 0;
+    font-weight: bold;
+}
+
+.main-right_second_circle {
+    top: 70%;
 }
