--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,9 @@ body {
 }
 
 .main-header {
-    width: 60%;
+    width: 80%;
     height: 100vh;
-    padding: 0 20%;
+    padding: 0 10%;
     background: url("../img/background.png") no-repeat right;
     background-size: cover;
 }
@@ -35,14 +35,14 @@ body {
 }
 
 .main-header-header_block-button {
-    width: auto;
-    padding: 2vh;
+    padding: 10%;
     outline: none;
     color: #0064aa;
     cursor: pointer;
-    font-size: 1.25vw;
     font-weight: 500;
+    font-size: 1.25vw;
     background: white;
+    width: max-content;
     border-radius: 1vh;
     height: max-content;
     text-transform: uppercase;
@@ -110,7 +110,7 @@ body {
 }
 
 .main-header-main_block-calculator {
-    width: 40%;
+    width: 50%;
     height: max-content;
 }
 
@@ -119,9 +119,8 @@ body {
 }
 
 #orderformph-new-2-iframe {
-    width: inherit !important;
     border-radius: 1vh;
-    box-shadow: 0 15px 30px 0 rgba(0, 100, 170, 0.5);
+    width: inherit !important;
 }
 
 .main-rating {
@@ -273,14 +272,14 @@ body {
 }
 
 .main-order_form-button {
-    width: auto;
-    padding: 2vh;
+    padding: 10%;
     color: white;
     outline: none;
     cursor: pointer;
-    font-size: 1.25vw;
     font-weight: 500;
+    font-size: 1.25vw;
     border-radius: 1vh;
+    width: max-content;
     background: #0064aa;
     height: max-content;
     text-transform: uppercase;
@@ -553,6 +552,12 @@ body {
 
     .main-header-main_block-calculator {
         width: 55%;
+    }
+
+    #orderformph-new-2-iframe {
+        margin-top: -15%;
+        transform: scale(0.7);
+        height: 560px !important;
     }
 }
 
