--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,39 @@ body {
     flex-direction: column;
 }
 
+.main-cookies {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 10vh;
+    z-index: 9999;
+    display: flex;
+    position: fixed;
+    background: white;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-cookies-text {
+    color: black !important;
+}
+
+.main-cookies-text-span {
+    color: #0064aa;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.main-cookies-text-span:hover {
+    text-decoration: underline;
+}
+
+.main-cookies-img {
+    width: 1%;
+    margin-left: 1%;
+    cursor: pointer;
+}
+
 .main-header {
     width: 80%;
     height: 100vh;
